--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Haerin Portfolio</title>
+  <title>Pixel Portfolio 2025</title>
   <meta name="description"
     content="Portfolio of a Visual Experience Designer specializing in 3D art and motion design." />
 </head>
