--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio (Clouds Added!)</title>
+
+  <!-- Cache Control: Force browser to check for new version -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
+  <title>YU HAERIN | Portfolio</title>
   <meta name="description"
-    content="Portfolio of a Visual Experience Designer specializing in 3D art and motion design." />
+    content="Portfolio of YU HAERIN - Visual Experience Designer specializing in 3D art and motion design." />
 </head>
 
 <body>
